<resources>
    <string name="app_name">TicTacToe</string>
    <string name="start_new_game">Start New Game</string>
    <string name="titactoe">Tic Tac Toe</string>
    <string name="Scoreboard">Score Board</string>
    <string name="TheGameBox">The GameBox</string>
    <string name="HANGMAN">HANGMAN</string>
    <string name="SCORES">SCORES</string>
    <string name="Games">Games</string>
    <string name="Credit">An application by:</string>
    <string name="Noam">Noam Zeltser</string>
    <string name="Jacques">Jacques Ren</string>
    <string name="Selma">Selma Castella</string>
    <string name="Léo">Léo Pellan</string>
</resources>